Fis compile error in static generation mode. Adjust samples CSS.

--- a/examples/basics/css/main.css
+++ b/examples/basics/css/main.css
@@ -1,6 +1,6 @@
 <?php 
 
-    include "dom.php"; // Include framework and then import needed functions
+    include __DIR__."/../dom.php"; // Include framework and then import needed functions
     use function dom\{unsplash_url_img};
 ?>
 
