--- a/examples/basics/css/main.css
+++ b/examples/basics/css/main.css
@@ -1,8 +1,4 @@
-<?php 
-
-    include __DIR__."/../dom.php"; // Include framework and then import needed functions
-    use function dom\{unsplash_url_img};
-?>
+<?php use function dom\{unsplash_url_img}; ?>
 
 /* Theme colors */
 :root {
@@ -17,10 +13,10 @@
     --dark-link-color-accent:   #f0f;
 }
 
-/* Toolbar */
+/* Page header & Toolbar */
 :root {
-    --header-height:         128px;
-    --header-min-height:      64px;
+    --header-height:         256px;
+    --header-min-height:       0px;
     --header-toolbar-height:  64px;
 }
 .toolbar-row-banner { 
@@ -29,32 +25,25 @@
     background-blend-mode: hard-light;
 }
 
-/* Page look */
-header, article { background-color: unset }
-aside           { border-color: var(--accent-color) }
-pre             { font-size: .8em; }
-
-/* Cards layout */
-.grid { grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr)) }
-
-/* Cards look */
-.card {     
-    background-color:   var(--background-lighter-color);
-    border:             1px solid var(--background-lighter-color);
-    border-radius:      .5em; 
-    box-shadow:         0px 0px 4px 2px var(--background-color); 
+/* Articles look */
+.article {     
+    border:         1px solid var(--background-lighter-color);
+    border-radius:  .5em; 
+    box-shadow:     0px 0px 4px 2px var(--background-darker-color); 
 } 
+
+/* Cards */
+.grid { 
+    grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr))
+}
 .card-title h1 {
     color: var(--text-lighter-color);
-    font-size: 1.17rem;
+    font-size: var(--h2-font-size);
 }
 
-/* Code look */
-pre {
-    border:         1px dashed var(--border-color);
-    padding:        var( --gap);
-    font-size:      .66em;
-    line-height:    1.3em;
+/* Aside look */
+aside { 
+    border-color: var(--accent-color)
 }
 
 /* On large screens, put aside on the side */
